[project]
name = "401k-withdrawal-bot"
version = "0.1.0"
description = "IRS-Compliant 401(k) Withdrawal Assistant"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2,<2.0",
    "langchain-core>=1.3,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langchain-community>=0.0.10,<1.0",
    "langgraph>=1.1,<2.0",
    "pydantic>=2.11,<3.0",
    "python-dotenv>=1.0,<2.0",
    "gradio>=5.0,<7.0",
    "google-search-results>=2.4.2",
]
